# ucsc-ectf-2023

./: .clang-format  .gdbinit  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.CI  README.md  README_PUBLIC.md  finding_friends.nu  grabbed_boards.nu  run_docker.sh  run_podman.nu  run_podman.sh  runner.sh
car/: Cargo.toml  Makefile  build.rs  memory.x  run_docker.sh
car/src/: main.rs  unlock.rs
comm_tests/: Cargo.toml
comm_tests/common/: Cargo.toml
comm_tests/common/src/: lib.rs  recv_tests.rs  send_tests.rs
comm_tests/host_comm_tests/: Cargo.toml
comm_tests/host_comm_tests/uart0_recv_host/: Cargo.toml
comm_tests/host_comm_tests/uart0_recv_host/src/: main.rs
comm_tests/host_comm_tests/uart0_send_host/: Cargo.toml
comm_tests/host_comm_tests/uart0_send_host/src/: main.rs
comm_tests/uart0_recv_board/: Cargo.toml
comm_tests/uart0_recv_board/src/: main.rs
comm_tests/uart0_send_board/: Cargo.toml  build.rs
comm_tests/uart0_send_board/src/: main.rs
comm_tests/uart1_recv_board/: Cargo.toml
comm_tests/uart1_recv_board/src/: main.rs
comm_tests/uart1_send_board/: .gdbinit  Cargo.toml  memory.x
comm_tests/uart1_send_board/src/: main.rs
deployment/: Makefile
docker_env/: build_image.Dockerfile
docker_env/eeprom_layout/: Cargo.toml
docker_env/eeprom_layout/src/: lib.rs
docker_env/util/: Cargo.toml
docker_env/util/src/: communication.rs  random.rs  runtime.rs
docker_env/util/src/communication/lower_layers/: crypto.rs  framing.rs
docker_env/util/src/communication/lower_layers/crypto/: chachapoly1305.rs
docker_env/util/src/listener/: error.rs
docker_env/util/src/random/entropy/: uninit_memory.rs
docker_env/util_common/: Cargo.toml
docker_env/util_common/src/: communication.rs  lib.rs  messages.rs  msg_parsing.rs  timer.rs
docker_env/util_common/src/communication/lower_layers/: framing.rs
docker_env/util_common/src/communication/lower_layers/crypto/: chachapoly1305.rs
docker_env/util_common/src/communication/lower_layers/framing/: bogoframing.rs
docker_env/util_no_std/: Cargo.toml
docker_env/util_no_std/src/: eeprom.rs  features.rs  hib.rs  lib.rs  runtime.rs  timer.rs
docker_env/util_no_std/src/communication/: secure_uart.rs  uart.rs
docker_env/util_std/: Cargo.toml
docker_env/util_std/src/: lib.rs  msg_parsing.rs
docker_env/util_std/src/communication/: framed_tcp.rs
eeprom_layout/src/: lib.rs
finding_friends/: get_board_map.nu
finding_friends/friendly_ping/: Cargo.toml  memory.x
finding_friends/friendly_ping/src/: main.rs
finding_friends/friendly_pong/: Cargo.toml
finding_friends/friendly_pong/src/: main.rs
fob/: Cargo.toml  Dockerfile  Makefile  build.rs
fob/src/: features.rs  main.rs  pairing.rs  unlock.rs
fob/src/pairing/: diffie_hellman.rs  pairing_sequence.rs
host_tools/: Cargo.toml  Makefile
host_tools/display_unlock_message/: Cargo.toml
host_tools/display_unlock_message/src/: main.rs
host_tools/enable_feature/: Cargo.toml
host_tools/enable_feature/src/: main.rs
host_tools/package_feature/: Cargo.toml
host_tools/package_feature/src/: main.rs
host_tools/pair_fob/: Cargo.toml
host_tools/pair_fob/src/: main.rs
rand_uninit_memory/: Makefile  rand_uninit_memory.c  rand_uninit_memory.h
scripts/decrypt/: Cargo.toml
scripts/decrypt/.cargo/: config.toml
scripts/decrypt/src/: main.rs
src/: main.rs
tests/: Cargo.toml
tests/src/: eeprom_tests.rs  main.rs  random_tests.rs  rt_comm_tests.rs  timer_tests.rs
util/: Cargo.toml  build.rs
util/src/: communication.rs  eeprom.rs  lib.rs  listener.rs  random.rs  rng.rs  runtime.rs  timer.rs  uart.rs
util/src/communication/: layers.rs  secure_uart.rs
util/src/communication/layers/: crypto.rs  framing.rs
util/src/communication/layers/crypto/: chacha20poly1305.rs  chachapoly1305.rs
util/src/communication/layers/framing/: udma.rs
util/src/communication/layers/framing/udma/: channel.rs
util/src/communication/lower_layers/framing/: uart.rs
util/src/listener/: error.rs
util/src/random/: entropy.rs
util/src/random/entropy/: adc.rs  clock_drift.rs  secret.rs  uninit_memory.rs
