[package]
name = "ucsc-ectf-car"
version = "0.1.0"
authors = ["2023 UCSC eCTF Team"]
categories = ["embedded", "no-std"]
license = "MIT"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.2"
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
panic-halt = "0.2.0"
tm4c123x-hal = "0.10.2"
