[workspace]
members = [
    "car",
    "docker_env/eeprom_layout",
    "fob",
    "docker_env/util_common",
    "docker_env/util_no_std",
    "tests",
    "finding_friends/friendly_ping",
    "finding_friends/friendly_pong",
]
exclude = [
    "docker_env/util_std",
    "host_tools/*",
]
resolver = "2"

[profile.dev]
opt-level = "z"
lto = true
codegen-units = 1

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

# Make sure tm4c123x and tm4c123x-hal use the latest cortex-m and cortex-m-rt crates to fix UB.

[patch.crates-io]
tm4c123x = { git = "https://git.ucsc.edu/ucsc-ectf-2023/dslite2svd.git", branch = "v0.9.0-update" }
tm4c123x-hal = { git = "https://git.ucsc.edu/ucsc-ectf-2023/tm4c-hal.git", branch = "tm4c123x-hal-0.10.2-update" }
