[package]
name = "ucsc-ectf-car"
version = "0.1.0"
edition = "2021"
authors = ["2023 UCSC eCTF Team"]
categories = ["embedded", "no-std"]
license = "MIT"

[dependencies]
cortex-m-rt = "0.7.2"
cortex-m-semihosting = "0.5.0"
panic-semihosting = { version = "0.6.0", optional = true }
panic-halt = "0.2.0"
tm4c123x-hal = { version = "0.10.2", features = ["rt"] }
ucsc-ectf-util = { path = "../util" }
