cargo-features = ["per-package-target"]
[package]
name = "ucsc-ectf-fob"
version = "0.1.0"
edition = "2021"
authors = ["2023 UCSC eCTF Team"]
categories = ["embedded", "no-std"]
license = "MIT"
forced-target = "thumbv7em-none-eabihf"

[profile.release]
lto = true
codegen-units = 1
debug = false
strip = true

[dependencies]
cortex-m-rt = "0.7.2"
cortex-m-semihosting = "0.5.0"
panic-semihosting = { version = "0.6.0", optional = true }
panic-halt = "0.2.0"
tm4c123x-hal = { version = "0.10.2", features = ["rt"] }
ucsc-ectf-util-no-std = { path = "../docker_env/util_no_std" }

[build-dependencies]
ecdsa = { version = "0.15.1", features = ["serde", "signing"] }
hex = "0.4.3"
k256 = { version = "0.12.0", features = ["ecdsa-core", "pem"] }
postcard = { version = "1.0.2", features = ["alloc"] }
ucsc-ectf-eeprom-layout = { path = "../docker_env/eeprom_layout" }

# Make sure tm4c123x and tm4c123x-hal use the latest cortex-m and cortex-m-rt crates to fix UB.

[patch.crates-io]
tm4c123x = { git = "https://git.ucsc.edu/ucsc-ectf-2023/dslite2svd.git", branch = "v0.9.0-update" }
tm4c123x-hal = { git = "https://git.ucsc.edu/ucsc-ectf-2023/tm4c-hal.git", branch = "tm4c123x-hal-0.10.2-update" }
