cargo-features = ["per-package-target"]
[package]
name = "host_tools"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-unknown-linux-gnu"
authors = ["2023 UCSC eCTF Team"]
license = "MIT"

[profile.release]
lto = true
codegen-units = 1
debug = false
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
