[package]
name = "ucsc-ectf-util"
version = "0.1.0"
edition = "2021"
authors = ["2023 UCSC eCTF Team"]
categories = ["embedded", "no-std"]
license = "MIT"

[dependencies]
cortex-m-rt = "0.7.2"
cortex-m-semihosting = "0.5.0"
tm4c123x-hal = { version = "0.10.2", features = ["rt"] }
arrayvec = { version = "0.7.2",  default-features = false }
once = "0.3.4"
sha2 = { version = "0.10.6", default-features = false }
aes-gcm = { version = "0.10.1", default-features = false, features = ["aes"] }
