[package]
name = "ucsc-ectf-comm-tests-common"
version = "0.1.0"
edition = "2021"
authors = ["2023 UCSC eCTF Team"]
categories = ["embedded", "no-std"]
license = "MIT"

[dependencies]
rand_chacha = { version = "0.3.1", default-features = false }
ucsc-ectf-util-common = { path = "../../docker_env/util_common" }
