cargo-features = ["per-package-target"]
[package]
name = "ucsc-ectf-util-common"
version = "0.1.0"
edition = "2021"
authors = ["2023 UCSC eCTF Team"]
categories = ["embedded", "no-std"]
license = "MIT"
forced-target = "thumbv7em-none-eabihf"

[profile.release]
lto = true
codegen-units = 1
debug = false
strip = true

[dependencies]
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["heapless"] }
generic-array = "0.14"
typenum = "1.16"
hex = {version = "0.4", default-features = false }
