[package]
name = "ucsc-ectf-util-std"
version = "0.1.0"
edition = "2021"
authors = ["2023 UCSC eCTF Team"]
license = "MIT"

[profile.release]
lto = true
codegen-units = 1
debug = false
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ucsc-ectf-util-common = { path = "../util_common" }
rand = "0.8.5"
