[package]
name = "ucsc-ectf-decrypt"
version = "0.1.0"
edition = "2021"
authors = ["2023 UCSC eCTF Team"]
license = "MIT"

[dependencies]
chacha20poly1305 = { version = "0.10.1", default-features = true, features = ["std"]}
clap = { version = "4.1.8", features = ["derive"] }
generic-array = "0.14.6"
hex = "0.4.3"
typenum = "1.16.0"
ucsc-ectf-eeprom-layout = { path = "../../docker_env/eeprom_layout" }
ucsc-ectf-util-common = { path = "../../docker_env/util_common" }
